src/snapshots/ruff__linter__tests__D402_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: NoSignature
  location:
    row: 378
    column: 4
  end_location:
    row: 378
    column: 30
  fix: ~

