src/snapshots/ruff__linter__tests__D405_sections.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    CapitalizeSectionName: returns
  location:
    row: 17
    column: 5
  end_location:
    row: 23
    column: 8
  fix: ~
- kind:
    CapitalizeSectionName: Short summary
  location:
    row: 207
    column: 5
  end_location:
    row: 221
    column: 8
  fix: ~

